# ANA

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  implementation_plan.md  pyproject.toml  spec.md
.agent/: agent.md
data/: templates.json
docs/: api.md  architecture.md  development.md  user_guide.md
examples/: sample_note.txt
obsidian-ana-plugin/: api.ts  main.js  main.ts  manifest.json  modal.ts  package-lock.json  package.json  settings.ts  sidebar.ts  styles.css
scripts/: download_rerank_model.py
src/: __init__.py  agent.py  backlink_analyzer.py  category_classifier.py  config.py  embedding_cache.py  errors.py  graph.py  link_analyzer.py  llm_config.py  logging_config.py  main.py  progress.py  prompt_manager.py  prompts.py  schemas.py  smart_tags.py  template_manager.py  utils.py  validators.py  vault_scanner.py
src/api/: __init__.py  schemas.py  server.py
src/cli/: __init__.py  commands.py  config_wizard.py  doctor.py  main.py
src/webui/static/: index.html
src/webui/static/css/: index.css
src/webui/static/js/: ana-api.js  app.js  markdown.js
templates/: default_template.md
tests/: __init__.py  conftest.py  test_agent.py  test_api_server.py  test_backlink_analyzer.py  test_category_classifier.py  test_embedding_cache.py  test_graph.py  test_link_analyzer.py  test_progress.py  test_prompt_manager.py  test_smart_tags.py  test_vault_scanner.py
